# LeishFASTQ

./: README.md  leishfastq.py  requirements.txt  setup.cfg
src/LeishFASTQ/: leishfastq.py
