[metadata]
name = LeishFASTQ
version = 0.0.1
author = Uli Dobramysl
author_email = ulrich.dobramysl@gmail.com
description = Analyse FASTQ files from bar-seq runs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    regex >= 2022.3.15
    pandas >= 2.0.3
    tqdm >= 4.66.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    leishfastq = LeishFASTQ.leishfastq:command_line
